Fix the overflow issue with the content and arrows

--- a/resources/sass/product.scss
+++ b/resources/sass/product.scss
@@ -7,6 +7,7 @@
     font-size: $product-variant-titles-font-size;
     letter-spacing: $product-variant-titles-letter-spacing;
     position: relative;
+    border-bottom: 4px solid transparent;
 
     &.active {
       border-bottom: 4px solid $navbar-item-hover-font-color;
@@ -120,6 +121,7 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: $primary-color !important;
+  background-color: rgba(255, 255, 255, 1);
 
   &:after {
     font-size: $product-variant-titles-font-size !important;
